# RoboSub_FW

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  west.yml
ESCC/: F091_override  main.cpp  mbed-os  mbed_app.json
NOGGIN_Qual/: main.cpp  mbed-os.lib
firmware/blink/: CMakeLists.txt  blink.cpp
firmware/ina219_currentsensor/: CMakeLists.txt  adafruit_ina219.h  currentsensor.c
firmware_simulation/current_sensor/: CMakeLists.txt
firmware_simulation/esc_servo_control/: CMakeLists.txt
firmware_simulation/ntc_temp_sensor/: CMakeLists.txt
firmware_simulation/pwm_led/: .gitignore  diagram.json  pwm_led.c  wokwi.toml
firmware_simulation/reading_slide_sw/: CMakeLists.txt  slide_sw.c  wokwi.toml
firmware_simulation/water_sensor/: README.md  diagram.json  water_sensor.c
libs/: mbed_app.json
libs/F091_override/: F091_override.h
robot_firmware/: README.md
robot_firmware/current_sensor/: current_sensor.c  wokwi.toml
robot_firmware/esc_servo_control/: esc_control.c
robot_firmware/integrated_hpdboard/: CMakeLists.txt  wokwi.toml
robot_firmware/integrated_sensorboard/: CMakeLists.txt  wokwi.toml
robot_firmware/integrated_servoboard/: CMakeLists.txt  servoboard.c
robot_firmware/ntc_temp_sensor/: diagram.json  temp_sensor.c  wokwi.toml
robot_firmware/ntc_temp_sensor/blink/: CMakeLists.txt  README.md  blink.c
robot_firmware/pwm_led/: CMakeLists.txt
robot_firmware/reading_slide_sw/: diagram.json
robot_firmware/relay_switch/: CMakeLists.txt  diagram.json  relay_sw.c  wokwi.toml
robot_firmware/water_sensor/: CMakeLists.txt
robot_workspace/: README.md
robot_workspace/apps/PicoBlinky/src/: PicoBlinky.lf  PicoToggleGPIO.lf
tests/b_g431b_esc1_canfd/: CMakeLists.txt  b_g431b_esc1_canfd.overlay  prj.conf
tests/nucleo_g0b1re_canfd/: CMakeLists.txt  nucleo_g0b1re_canfd.overlay  prj.conf
tests/nucleo_g0b1re_canfd/src/: main.c
